# masterclean

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  messy.csv  pyproject.toml  report.html  report.txt  requirements.txt  sample.csv  sample.xlsx  test_sample.xlsx
.github/workflows/: tests.yml
examples/: cli_example.md  python_example.py  sample.csv
masterclean/: __init__.py  cleaner.py  cli.py  datatypes.py  exporter.py  profiler.py  reader.py  report.py  validator.py  visualizer.py
masterclean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
masterclean/ai/: insights.py
masterclean/dashboard/: report.py  visualizer.py
masterclean/ml/: anomaly_detector.py  anomaly_visualizer.py
masterclean/preprocessing/: cleaner.py  datatypes.py
masterclean/utils/: exporter.py  logger.py  reader.py
masterclean/validation/: profiler.py  validator.py
tests/: sample.csv  test_cleaner.py  test_datatypes.py  test_excel_reader.py  test_exporter.py  test_missing_values.py  test_profiler.py  test_reader.py  test_report.py  test_validator.py  test_visualizer.py
