[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterclean"
version = "1.0.0"
description = "Automated CSV cleaning toolkit"
authors = [
  {name = "Mohamed Faisal"}
]

dependencies = [
  "pandas",
  "numpy",
  "typer",
  "chardet",
  "pytest",
  "openpyxl",
  "matplotlib",
  "plotly",
  "rich"
]
[project.scripts]
masterclean = "masterclean.cli:main"
[tool.setuptools.packages.find]

include = ["masterclean*"]