[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterclean"
version = "1.1.0"
description = "Automated Data Cleaning, Validation and Analytics Toolkit"

readme = "README.md"

requires-python = ">=3.9"

license = {text = "MIT"}

authors = [
{name = "Mohamed Faisal"}
]

keywords = [
"data-cleaning",
"data-analysis",
"csv-cleaner",
"data-validation",
"analytics",
"plotly",
"automation",
"preprocessing"
]

classifiers = [

"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Intended Audience :: Developers",
"Topic :: Scientific/Engineering :: Information Analysis"

]

dependencies = [
"pandas",
"numpy",
"typer",
"chardet",
"pytest",
"openpyxl",
"matplotlib",
"plotly",
"rich"
]

[project.urls]

Homepage = "https://github.com/MohamedFaisal-11/masterclean"

Repository = "https://github.com/MohamedFaisal-11/masterclean"

Issues = "https://github.com/MohamedFaisal-11/masterclean/issues"

[project.scripts]

masterclean = "masterclean.cli:main"

[tool.setuptools.packages.find]

include = ["masterclean*"]
